--- a/ShareMemoryDll/ShareMemoryDll.vcxproj.filters
+++ b/ShareMemoryDll/ShareMemoryDll.vcxproj.filters
@@ -23,7 +23,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ShareMemoryWrite.cpp">
+    <ClCompile Include="dllmain.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="pch.cpp">
