--- a/ShareMemoryDll/ShareMemoryDll.vcxproj.filters
+++ b/ShareMemoryDll/ShareMemoryDll.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="ShareMemoryDll.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="..\TestFileLock\RWFileLock.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -33,6 +36,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="ShareMemoryDll.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="..\TestFileLock\RWFileLock.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
